Feat: Frontend devleopment progress
